# Sailbot

./: .clang-format  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  cert.pem  compile.sh  compileDocker.sh  config.ini  docker.py  eventDefaults.ini  index.html  init.sh  key.pem  mkdocs.yml  output.geojson  package.xml  platformio.ini  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements.txt  rtk_config.json  run.sh  runAdditional.sh  sailbot.toml  sitemap.xml
.devcontainer/: devcontainer.json
Getting Started/: index.html
Github Workshop/: index.html
Pi Cheat Sheet/: index.html
ROS2/: index.html
Shell Commands/: index.html
Starting the Boat/: index.html
Teensy/: platformio.ini
Utils/: cameraServer.py  docker.py  installUhubctl.sh  logParser.py  odriveCalibration.py  testResultsPrinter.py
docs/: Getting Started.md  Github Workshop.md  Pi Cheat Sheet.md  README.md  ROS2.md  Shell Commands.md  Starting the Boat.md  StartupProcedure.md  Troublshooting.md  index.md
launch/: boat_all.py
sailbot/: boatMain.py  boatMovement.py  boatSim.py  config.ini  main.py
search/: search_index.json
src/drivers/: CMakeLists.txt  README.md
src/drivers/src/: gps.cpp  imu.cpp  transceiver.cpp  water_sensors.cpp
src/interfaces/: CMakeLists.txt  README.md  package.xml
src/interfaces/msg/: Waypoint.msg
src/sailbot/: boatMain.py  boatMovement.py  config.ini  main.py  package.xml  setup.cfg  setup.py
src/sailbot/Arduino/: WaterLevelSensor.ino
src/sailbot/config/: params_eventDefaults.yaml  params_websiteTest.yaml
src/sailbot/events/: endurance.py  precisionNavigation.py  precisionNavigation_test.py  search.py  stationKeeping.py  stationKeepingMVP.py
src/sailbot/launch/: README.md  boat_all.launch.py  boat_all.py  boat_core.launch.py  boat_core.py  debug_transceiver.launch.py  event_launch.launch.py  websiteTest.launch.py  websiteTest.py
src/sailbot/peripherals/: GPS.py  WaterLevelSensor.py  camera.py  cameraServos.py  transceiver.py
src/sailbot/sailbot/: ActionManager.py  __init__.py  boatMain.py  boatMath.py  boatMovement.py  boatSim.py  config.ini  constants.py  main.py  navigation.py  objectDetection.py  rosTest.py  utils.py  waypoint_manager.py
src/sailbot/sailbot/CV/: image_analysis_gui.py  image_analysis_test.py  objectDetection.py
src/sailbot/sailbot/GUI/: GUI.py
src/sailbot/sailbot/deprecated/: bitBashing.py  boatMain.py  boat_hack(2).py  boat_hack.py  camera.py  class test.py  downwind.py  drivers.py  find buoy.py  main.py  motorOffset.py  search - angle.py
src/sailbot/sailbot/deprecated/Opencv2/: collision detect - color track.py  color_track multi.py  color_track weight.py  colorless_track weight.py  colorless_track weight2.py  exp orang_pop.py  exp red_girl.py  image_analysis_gui.py  image_analysis_test.py
src/sailbot/sailbot/deprecated/Transciever/Transciever_boat/: Transciever_boat.ino
src/sailbot/sailbot/events/: DummyEvent.py  DummyEventSearch.py  README.md  collisionAvoidance.py  endurance.py  eventUtils.py  events.py  heaveTo.py  manualControl.py  precisionNavigation.py  precisionNavigation_test.py  search.py  stationKeeping.py  stationKeeping2.py  stationKeepingMVP.py
src/sailbot/sailbot/navigation/: TackingNavStrategy.py  jybingNavStrategy.py  navStrategy.py  waypointPlanner.py
src/sailbot/sailbot/peripherals/: .transceiver.py.swp  GPS.py  Odrive.py  README.md  camera.py  cameraServos.py  compass.py  drivers.py  gps.py  mcu_proto_bridge.py  motorDrivers.py  rtk.py  rtk1.py  rudder.py  sail.py  stepper.py  teensy.py  transceiver.py  waveshare demo code (temp).py  web_rtk.py  windvane.py
src/sailbot/sailbot/protobuf/: mcu_pb2.py  pi_pb2.py  teensy_pb2.py
src/sailbot/sailbot/telemetry/Transciever/Transciever_boat/: controlsData.pb.h
src/sailbot/sailbot/telemetry/Transciever/Transciever_sender/: Transciever_sender.ino
src/sailbot/sailbot/telemetry/protobuf/: controlsData.proto  controlsData_pb2.py  teensy_pb2.py
src/sailbot/sailbot/utils/: NetworkLogger.py  boatMath.py  eventUtils.py  odrive_param_tuning.py  utils.py
src/sailbot/sailbot/virtualPeripherals/: GPS.py  Odrive.py  __init__.py  camera.py  cameraServos.py  compass.py  drivers.py  transceiver.py  windvane.py
src/sailbot/sailbot/website/: mapGeneration.py  website.py  websiteNoROS.py
src/sailbot/sailbot/website/static/css/: style.css
src/sailbot/sailbot/website/static/js/: universal.js
src/sailbot/sailbot/website/templates/: index.html  layout.html
src/sailbot/sailbot/websiteHosting/: README.md  networkLoggingServer.py  website.py  websiteNoROS.py
src/sailbot/sailbot/websiteHosting/OSM_Scripts/: backupVolume.bash  configureServer.bash  delete_osm_data.bash  nginx_conf  restoreBackup.bash  setup.bash
src/sailbot/sailbot/websiteHosting/docs/: instructions
src/sailbot/sailbot/websiteHosting/static/css/: style.css
src/sailbot/sailbot/websiteHosting/static/images/: compass-2.psd  pointer.psd
src/sailbot/sailbot/websiteHosting/static/js/: universal.js
src/sailbot/sailbot/websiteHosting/static/leaflet/: leaflet.css  leaflet.js
src/sailbot/sailbot/websiteHosting/templates/: camera.html  compass.html  index.html  layout.html  logSearch.html  logs.html  map.html  test.html
src/sailbot/scripts/: startRtk.bash
src/sailbot/teensy/: README.md  controlsData.pb.c  teensy.ino  water_sensor.ino
src/sailbot/test/: pep257.py  testResultsPrinter.py  test_all.py
src/sailbot/tests/: manual_tests.py  test_all.py  test_basic.py  test_controls.py  test_events.py  test_performance.py  test_sensors.py
src/sailbot/utils/: eventUtils.py  utils.py
src/sailbot/virtualPeripherals/: GPS.py  Odrive.py  camera.py  cameraServos.py  drivers.py
src/sailbot/website/: website.py
src/sailbot_interfaces/: CMakeLists.txt  package.xml
src/sailbot_interfaces/msg/: Waypoint.msg  WaypointQueueState.msg
src/sailbot_interfaces/srv/: AddWaypoint.srv  DeleteWaypoint.srv  GetWaypointQueue.srv  ReorderWaypoints.srv  SetCurrentIndex.srv  SetWaypointQueue.srv  UpdateWaypoint.srv
(+184 files in other folders)
