<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sailbot</name>
  <version>0.0.0</version>
  <description>Pitt's Sailbot repo</description>
  <maintainer email="sailbot.pitt@gmail.com">Pitt Sailbot</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <exec_depend>python</exec_depend>
  <exec_depend>ament_copyright</exec_depend>
  <exec_depend>ament_flake8</exec_depend>
  <exec_depend>ament_pep257</exec_depend>
  <exec_depend>python3-pytest</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
